# learn-jni

./: .gitignore  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk  readme.md
app/jni/ffmpeg/prebuilt/android/: Android.mk
app/jni/ffmpeg3-2/include/libavutil/: ffversion.h
app/jni/ffmpeg3-2/prebuilt/win32/: avcodec.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
app/jni/leak-tracer/: Android.mk  CMakeLists.txt
app/jni/leak-tracer/include/: MemoryTrace.hpp
app/jni/leak-tracer/src/: MemoryTrace.cpp
app/jni/leak-tracer/test/: CMakeLists.txt  Readme.md
app/jni/openal1-19/prebuilt/android/: Android.mk
app/src/androidTest/java/com/example/learnndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/learnndk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/learnndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
